# horizen-migration-snapshot-automation

./: README.md  docker-compose.yml
compose_files/: docker-compose.yml
container_mounts/evmapp/: reseed_entrypoint.sh
container_mounts/zend/: dump.sh  reseed.sh  snapshot.sh
docs/: automated-snapshot.md
env/: .env.eon.template  .env.gobi.template  env.eon.template  env.gobi.template
monitoring/: Dockerfile  monitoring-service.py
monitoring/horizen-scripts/: get_all_forger_stakes.py
orchestrator/: Dockerfile  entrypoint.sh  orchestrator-service.py  orchestrator.py  pyproject.toml  requirements.txt
orchestrator/horizen-scripts/: setup_eon2_genesis_json.py
scripts/: clean.sh  dumper.sh  init.sh  utils.sh
